fix: [PIE-2091]: added handling for lengthy text spillover in input set list and form view (#6871)

--- a/src/modules/70-pipeline/components/InputSetForm/InputSetForm.module.scss
+++ b/src/modules/70-pipeline/components/InputSetForm/InputSetForm.module.scss
@@ -30,6 +30,14 @@
   cursor: move;
 }
 
+.pageHeaderStyles {
+  > div {
+    &:first-child {
+      flex-grow: 1;
+    }
+  }
+}
+
 .dragging {
   background-color: var(--yellow-450) !important;
 }
